<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_edit_user_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:elevation="2dp"
        android:padding="@dimen/padding_small"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_edit_user_height_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_edit_user_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin_medium"
        app:errorEnabled="true"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/dialog_edit_user_height_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/height_in_cm"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3"
            android:maxLines="1"
            android:minLines="1"
            android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
            android:textColor="@color/colorTextBlack"
            android:textColorHint="@color/colorTextDark" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/dialog_edit_user_ph_activity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_edit_user_height_inputlayout"
        android:layout_marginStart="@dimen/activity_vertical_margin_medium"
        android:layout_marginEnd="@dimen/activity_vertical_margin_medium"
        android:layout_marginBottom="@dimen/activity_vertical_margin_medium"
        android:text="@string/physical_actvitiy_label" />

    <SeekBar
        android:id="@+id/dialog_edit_user_ph_activity_seekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_edit_user_ph_activity_label"
        android:layout_marginStart="@dimen/activity_vertical_margin_medium"
        android:layout_marginEnd="@dimen/activity_vertical_margin_medium"
        android:layout_marginBottom="@dimen/activity_vertical_margin_medium"
        android:max="4"
        android:progress="2"
        android:progressBackgroundTint="@color/colorPrimary"
        android:progressTint="@color/colorPrimary"
        android:thumbTint="@color/colorPrimary" />

    <TextView
        android:id="@+id/dialog_edit_user_ph_activity_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_edit_user_ph_activity_seekbar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/activity_vertical_margin_medium"
        android:layout_marginEnd="@dimen/activity_vertical_margin_medium"
        android:layout_marginBottom="@dimen/activity_vertical_margin_medium"
        android:text="@string/dialog_edit_user_ph_activity_description_3"
        android:textAlignment="center" />

</RelativeLayout>