<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_credentials_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:elevation="2dp"
        android:padding="@dimen/padding_small"
        android:text="@string/dialog_credentials_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_credentials_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_credentials_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin_small"
        android:text="@string/ask_for_scale_credentials_dialog_instructions"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/dialog_credentials_index_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_credentials_instructions"
        android:layout_alignTop="@id/dialog_credentials_pin_inputlayout"
        android:layout_alignBottom="@id/dialog_credentials_pin_inputlayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/activity_vertical_margin_small"
        android:layout_marginEnd="@dimen/activity_vertical_margin_small"
        android:dropDownWidth="match_parent"
        android:entries="@array/scale_user_indexes_array"
        android:spinnerMode="dialog" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_credentials_pin_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_vertical_margin_small"
        android:layout_below="@id/dialog_credentials_instructions"
        android:layout_toEndOf="@id/dialog_credentials_index_spinner"
        app:errorEnabled="false"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/dialog_credentials_pin_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/scale_pin"
            android:digits="0123456789"
            android:maxLength="4"
            android:inputType="number"
            android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
            android:textColor="@color/colorTextBlack"
            android:textColorHint="@color/colorTextDark" />
    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>