<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.dglozano.escale.ui.common.pw_recovery.RecoverPasswordActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recover_password_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/almostWhite">

        <RelativeLayout
            android:id="@+id/recover_password_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin_medium"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/recover_password_instruction_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_medium"
                android:text="@string/recover_pass_instructions"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textColor="@color/colorTextDark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recover_password_email_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recover_password_instruction_text"
                android:layout_marginTop="@dimen/activity_vertical_margin_medium"
                app:errorEnabled="false"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/recover_email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    android:textColor="@color/colorTextBlack"
                    android:textColorHint="@color/colorTextDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/recover_password_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin_very_big"
                android:background="@drawable/button_rounded"
                android:text="@string/recover_password_button"
                android:textColor="@color/almostWhite"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/recover_password_progress_bar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlackOverlay"
            android:visibility="gone"
            tools:ignore="ExtraText">

            <ProgressBar
                android:id="@+id/recover_password_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorAccent" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>